# SmartCalc

./: README.md
src/: CMakeLists.txt  Makefile  install.sh  main.cc  main.cpp  structures.h
src/controller/: controller.cc  controller.cpp  controller.h
src/model/: model.cc  model.cpp  model.h
src/resources/: fonts.qrc
src/test/: test_core.cc  test_core.cpp  test_core.h  test_credit_calc.cc  test_credit_calc.cpp  test_smart_calc.cc  test_smart_calc.cpp
src/view/: LineEditClickFilter.cpp  LineEditClickFilter.h  line_edit_click_filter.cc  line_edit_click_filter.h  qlabelhorizontal.cpp  qlabelhorizontal.h  view.cc  view.cpp  view.h  view.ui
